--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "node build.js"
+    "build": "node build.js",
+    "build-css": "npx tailwindcss build src/styles/tailwind.css -o src/assets/styles.css  --watch"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,9 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "archiver": "^7.0.1"
+    "archiver": "^7.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   }
 }
