--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fs": "0.0.1-security",
     "jsdom": "^24.1.1",
     "livereload": "^0.9.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "archiver": "^7.0.1",
